<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_manipulators_cpp</name>
  <version>1.0.0</version>
  <description>RT Manipulators C++ Library</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <license>Apache License 2.0</license>

  <author email="s.aoki@rt-net.jp">ShotaAk</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>dynamixel_sdk</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>yaml_cpp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
